# webrtc-experiment

./: module.nix
client/: default.nix  package-lock.json  package.json  tsconfig.json  webpack.config.js  webrtc.nix
client/src/: App.tsx  Room.tsx  Video.tsx  global.d.ts  index.html  index.ts  index.tsx  style.css  util.ts  ws.ts
server/: Cargo.toml  default.nix  server.nix  shell.nix  webrtc.nix
server/src/: lib.rs
server/src/signalling/: error.rs  message.rs  mod.rs
server/src/stream/: error.rs  mod.rs  pipeline.rs
stream/: default.nix  setup.cfg  webrtc.nix
stream/src/webrtc/: __init__.py  peer.py  src.py
