[package]
name = "webrtc"
version = "0.1.0"
authors = ["Kai Wohlfahrt <kai.wohlfahrt@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = [ "rt", "net" ] }
tokio-stream = { version = "0.1", features = [ "net" ] }
tungstenite = { version = "0.13", default-features = false }
tokio-tungstenite = "0.13"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gstreamer = "0.16"
gstreamer-webrtc = "0.16"
gstreamer-sdp = "0.16"
rand = "0.8"
clap = "2"
actix-web = "3"
actix-web-actors = "3"
actix = "0.10"
awc = "2"

[lib]
path = "src/lib.rs"

[[bin]]
name = "signalling"
path = "src/bin/signalling.rs"

[[bin]]
name = "stream"
path = "src/bin/stream.rs"
